// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/metadata-instance-editor/fields/TemplatedInstance should correctly render attributes hidden message 1`] = `
<Fragment>
  <div
    className="attributes-hidden-message"
  >
    <MemoizedFormattedMessage
      defaultMessage="All attributes in this template have been hidden."
      id="boxui.metadataInstanceEditor.allAttributesAreHidden"
    />
  </div>
</Fragment>
`;

exports[`features/metadata-instance-editor/fields/TemplatedInstance should correctly render fields that are visible 1`] = `
<Fragment>
  <MetadataField
    blurExceptionClassNames={[]}
    dataKey="hiddenfield"
    displayName="String Field that is hidden"
    isHidden={true}
    key="field0"
    onChange={[Function]}
    onRemove={[Function]}
    type="string"
  />
  <MetadataField
    blurExceptionClassNames={[]}
    dataKey="nodescfield"
    displayName="No Description Field"
    isHidden={false}
    key="field1"
    onChange={[Function]}
    onRemove={[Function]}
    type="string"
  />
  <MetadataField
    blurExceptionClassNames={[]}
    dataKey="stringfield"
    dataValue="some string"
    description="example of a string field"
    displayName="String Field"
    isHidden={false}
    key="field2"
    onChange={[Function]}
    onRemove={[Function]}
    type="string"
  />
  <MetadataField
    blurExceptionClassNames={[]}
    dataKey="emptystring"
    description="example of an empty string field"
    displayName="Empty String Field"
    isHidden={false}
    key="field3"
    onChange={[Function]}
    onRemove={[Function]}
    type="string"
  />
  <MetadataField
    blurExceptionClassNames={[]}
    dataKey="floatfield"
    dataValue={1}
    description="example of a float field"
    displayName="Float Field"
    isHidden={false}
    key="field4"
    onChange={[Function]}
    onRemove={[Function]}
    type="float"
  />
  <MetadataField
    blurExceptionClassNames={[]}
    dataKey="emptyfloat"
    description="example of an empty float field"
    displayName="Empty Float Field"
    isHidden={false}
    key="field5"
    onChange={[Function]}
    onRemove={[Function]}
    type="float"
  />
  <MetadataField
    blurExceptionClassNames={[]}
    dataKey="enumfield"
    dataValue="yes"
    description="example of a enum field"
    displayName="Enum Field"
    isHidden={false}
    key="field6"
    onChange={[Function]}
    onRemove={[Function]}
    options={
      [
        {
          "key": "yes",
        },
        {
          "key": "no",
        },
      ]
    }
    type="enum"
  />
  <MetadataField
    blurExceptionClassNames={[]}
    dataKey="emptyenumfield"
    description="example of an empty enum field"
    displayName="Empty Enum Field"
    isHidden={false}
    key="field7"
    onChange={[Function]}
    onRemove={[Function]}
    options={
      [
        {
          "key": "yes",
        },
        {
          "key": "no",
        },
      ]
    }
    type="enum"
  />
  <MetadataField
    blurExceptionClassNames={[]}
    dataKey="datefield"
    dataValue="2018-06-20T00:00:00.000Z"
    description="example of a date field"
    displayName="Date Field"
    isHidden={false}
    key="field8"
    onChange={[Function]}
    onRemove={[Function]}
    type="date"
  />
  <MetadataField
    blurExceptionClassNames={[]}
    dataKey="emptydatefield"
    description="example of an empty date field"
    displayName="Empty Date Field"
    isHidden={false}
    key="field9"
    onChange={[Function]}
    onRemove={[Function]}
    type="date"
  />
  <MetadataField
    blurExceptionClassNames={[]}
    dataKey="hiddenfield"
    displayName="Another string Field that is hidden"
    isHidden={true}
    key="field10"
    onChange={[Function]}
    onRemove={[Function]}
    type="string"
  />
</Fragment>
`;

exports[`features/metadata-instance-editor/fields/TemplatedInstance should correctly render no attributes message 1`] = `
<Fragment>
  <div
    className="no-attributes-message"
  >
    <MemoizedFormattedMessage
      defaultMessage="There are no attributes in this template."
      id="boxui.metadataInstanceEditor.noAttributesForTemplate"
    />
  </div>
</Fragment>
`;
